--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
     <servlet>
-        <servlet-name>HelloServlet</servlet-name>
+        <servlet-name>StartPageServlet</servlet-name>
         <jsp-file>/WEB-INF/jsp/Signup.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
-        <servlet-name>HelloServlet</servlet-name>
+        <servlet-name>StartPageServlet</servlet-name>
         <url-pattern>/</url-pattern>
-
     </servlet-mapping>
     <servlet>
         <servlet-name>SignUpServlet</servlet-name>
@@ -47,6 +46,7 @@
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>/css/*</url-pattern>
+        <url-pattern>/javascript/*</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>defaults</servlet-name>
@@ -56,6 +56,7 @@
         <servlet-name>defaults</servlet-name>
         <url-pattern>/back</url-pattern>
     </servlet-mapping>
+
 
 
 </web-app>
